# tailwind-rs

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Readme.md  package.json  rustfmt.toml
legacy/tailwind-nom/: Cargo.toml  Readme.md  rustfmt.toml
legacy/tailwind-nom/src/ast/: display.rs  from_str.rs  methods.rs  mod.rs
legacy/tailwind-nom/src/utils/: tests.rs
projects/const-css-color/: Cargo.toml  package.json  rustfmt.toml
projects/const-css-color/src/: lib.rs
projects/const-css-color/src/color/: codegen.m  css-color-names.json  mod.rs  predefined.md  predefined.rs
projects/const-css-color/tests/: main.rs
projects/tailwind-ast/: Cargo.toml  build.rs
projects/tailwind-ast/grammars/: tailwind.ygg
projects/tailwind-ast/src/: lib.rs
projects/tailwind-ast/src/ast/: display.rs  methods.rs  mod.rs  parse.rs  tests.rs
projects/tailwind-ast/src/ast/arbitrary/: from.rs  methods.rs  mod.rs
projects/tailwind-ast/src/ast/elements/: mod.rs
projects/tailwind-ast/src/ast/length/: mod.rs
projects/tailwind-ast/src/ast/variants/: methods.rs  mod.rs
projects/tailwind-ast/src/codegen/: mod.rs
projects/tailwind-ast/src/parser/: mod.rs  parse.rs  tw.peg  tw.rs
projects/tailwind-ast/src/utils/: mod.rs
projects/tailwind-ast/tests/: main.rs
projects/tailwind-ast/tests/complex/: mod.rs  test1.in.txt  test1.out.txt  tests.rs
projects/tailwind-ast/tests/simple/: easy.in.txt  easy.out.txt  mod.rs  nest.in.txt  nest.out.txt
projects/tailwind-cli/: Cargo.toml
projects/tailwind-cli/src/: main.rs
projects/tailwind-cli/src/commands/: mod.rs
projects/tailwind-cli/src/run/: mod.rs
projects/tailwind-error/: Cargo.toml  Readme.md  readme.md
projects/tailwind-error/src/: errors.rs  lib.rs
projects/tailwind-error/src/error/: error_std.rs  for_diagnostic.rs  mod.rs
projects/tailwind-error/src/error_3rd/: for_css_color.rs  for_git2.rs  for_glob.rs  for_globset.rs  for_html_parser.rs  for_lsp.rs  for_nom.rs  for_num.rs  for_parcel_css.rs  for_peg.rs  for_pest.rs  for_sass.rs  for_serde_json.rs  for_time.rs  for_tl.rs  mod.rs
projects/tailwind-error/src/error_3rd/for_tl/: mod.rs
projects/tailwind-error/tests/: main.rs
projects/tailwind-macro/: Cargo.toml  Readme.md
projects/tailwind-macro/src/: lib.rs
projects/tailwind-macro/src/inline/: mod.rs
projects/tailwind-macro/tests/: main.rs
projects/tailwind-rs/: Cargo.toml  Readme.md
projects/tailwind-rs/src/: errors.rs  lib.rs
projects/tailwind-rs/src/config/: mod.rs  tailwind.toml
projects/tailwind-rs/src/processor/: methods.rs  mod.rs
projects/tailwind-rs/src/support/: mod.rs
projects/tailwind-rs/src/support/support_html/: mod.rs
projects/tailwind-rs/tests/: main.rs
projects/tailwind-rs/tests/html/: arbitrary-values.html  mod.rs
projects/tailwind-rs/tests/html/accessibility/: accessibility.html  accessibility.obfuscate.css  accessibility.obfuscate.html  accessibility.trace.css  accessibility.trace.html  mod.rs
projects/tailwind-rs/tests/html/arbitrary/: arbitrary.html  arbitrary.inline.html  arbitrary.keyed.css  arbitrary.keyed.html  arbitrary.scoped.css  arbitrary.scoped.html  arbitrary.traced.css  arbitrary.traced.html  arbitrary.value.css  arbitrary.value.html  mod.rs
projects/tailwind-rs/tests/html/background/: background.html  background.inline.html  background.traced.css  background.traced.html  mod.rs
projects/tailwind-rs/tests/html/border/: border.html  border.inline.html  border.traced.css  border.traced.html  mod.rs
projects/tailwind-rs/tests/html/effect/: effect.html  effect.inline.html  effect.traced.css  effect.traced.html  mod.rs
projects/tailwind-rs/tests/html/filter/: filter.html  filter.inline.html  filter.traced.css  filter.traced.html  mod.rs
projects/tailwind-rs/tests/html/flex/: flex.html  flex.inline.html  flex.scoped.css  flex.scoped.html  flex.traced.css  flex.traced.html  mod.rs
projects/tailwind-rs/tests/html/grouped/: grouped.html  grouped.inline.html  grouped.keyed.css  grouped.keyed.html  grouped.scoped.css  grouped.scoped.html  grouped.traced.css  grouped.traced.html  grouped.value.css  grouped.value.html  mod.rs
projects/tailwind-rs/tests/html/interactivity/: interactivity.html  interactivity.inline.html  interactivity.traced.css  interactivity.traced.html  mod.rs
projects/tailwind-rs/tests/html/layout/: layout.html  layout.inline.css  layout.inline.html  layout.keyed.html  layout.scoped.css  layout.scoped.html  layout.traced.css  layout.traced.html  layout.value.css  layout.value.html  mod.rs
projects/tailwind-rs/tests/html/sizing/: mod.rs  sizing.html  sizing.inline.html  sizing.traced.css  sizing.traced.html
projects/tailwind-rs/tests/html/spacing/: mod.rs  spacing.html  spacing.inline.html  spacing.traced.css  spacing.traced.html
projects/tailwind-rs/tests/html/svg/: mod.rs
projects/tailwind-rs/tests/html/table/: mod.rs  table.html  table.inline.html  table.traced.css  table.traced.html
projects/tailwind-rs/tests/html/transform/: mod.rs  transform.html  transform.inline.html  (+2 more)
projects/tailwind-show/: Cargo.toml  index.html
projects/tailwind-show/src/: main.rs
projects/tailwind-show/src/components/: mod.rs  placeholder.html
projects/tailwind-show/tests/: main.rs
projects/tailwind-to-css/: Cargo.toml  Readme.md  package.json  readme.md
projects/tailwind-to-css/src/: lib.rs
projects/tailwind-to-css/src/builder/: mod.rs
projects/tailwind-to-css/src/css/: CssAttributes.md  mod.rs  resolve_normal.rs  resolve_ring.rs
projects/tailwind-to-css/src/macros/: mod.rs
projects/tailwind-to-css/src/modules/: mod.rs
projects/tailwind-to-css/src/parser/: methods.rs  mod.rs  parse.rs  tests.rs
projects/tailwind-to-css/src/resolver/: mod.rs
projects/tailwind-to-css/src/systems/: mod.rs  preflight.rs
projects/tailwind-to-css/src/traits/: attribute.rs  instance.rs  mod.rs  object.rs
projects/tailwind-to-css/src/units/: mod.rs
projects/tailwind-to-css/tests/: main.rs  readme.md
projects/tailwind-to-css/tests/systems/: mod.rs  space-inline.css  table-bundle.css  table-inline.css
projects/tailwind-web/: Cargo.toml
(+608 files in other folders)
