[package]
name = "const-css-color"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Nom parser for tailwind instructions"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
konst="0.2.13"

[dev-dependencies]

[features]
default = []
