[package]
name = "tailwind-ast"
version = "0.4.1"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind ast + parser"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
nom = "7.1.1"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
