[package]
name = "tailwind"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind cli in rust"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
tailwind-rs = { version = "0.2.0", path = "../tailwind-rs" }
itertools = "0.10.3"
log = "0.4.14"
glob = "0.3.0"
globset = "0.4.8"
byte-unit = "4.0.14"

[dependencies.tailwind-error]
version = "1.1.6"
features = ["parcel_css", "nom", "css-color", "globset", "glob"]

[dev-dependencies]

[features]
default = ["html"]
html = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
i = "cargo install --path . --debug"
