[package]
name = "tailwind"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind cli in rust"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
itertools = "0.11.0"
log = "0.4.20"
glob = "0.3.1"
globset = "0.4.13"
byte-unit = "4.0.19"

[dependencies.tailwind-rs]
version = "0.2.*"
path = "../tailwind-rs"

[dependencies.tailwind-error]
version = "1.3.*"
path = "../tailwind-error"
features = ["lightningcss", "nom", "css-color", "globset", "glob"]

[dev-dependencies]

[features]
default = ["html"]
html = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
i = "cargo install --path . --debug"
