[package]
name = "tailwind-error"
version = "1.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind Error Handlers"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-error"
categories = []
keywords = ["error", "tailwind"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.2.2"
# 3rd parts
nom = { version = "7.1.0", optional = true }
num = { version = "0.4.0", optional = true }
tl = { version = "0.7.1", optional = true }
rust_decimal = { version = "1.22.0", optional = true }
pest = { version = "2.1.3", optional = true }
glob = { version = "0.3.0", optional = true }
globset = { version = "0.4.8", optional = true }
lsp-types = { version = "0.92.0", optional = true }
chrono = { version = "0.4.19", optional = true }
parcel_css = { version = "1.0.0-alpha.18", optional = true }
css-color = { version = "0.2.4", optional = true }

[dev-dependencies]

[features]
default = []
#lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
