[package]
name = "tailwind-error"
version = "1.3.3"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind Error Handlers"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-error"
categories = []
keywords = ["error", "tailwind"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
nom = { version = "7.1.3", optional = true }
num = { version = "0.4.1", optional = true }
tl = { version = "0.7.7", optional = true }
rust_decimal = { version = "1.32.0", optional = true }
pest = { version = "2.7.4", optional = true }
glob = { version = "0.3.1", optional = true }
globset = { version = "0.4.13", optional = true }
lsp-types = { version = "0.94.1", optional = true }
chrono = { version = "0.4.31", optional = true }
lightningcss = { version = "1.0.0-alpha.49", optional = true }
css-color = { version = "0.2.5", optional = true }

[dev-dependencies]

[features]
default = []
#lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
