[package]
name = "tailwind-error"
version = "1.3.2"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind Error Handlers"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-error"
categories = []
keywords = ["error", "tailwind"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
nom = { version = "7.1.1", optional = true }
num = { version = "0.4.0", optional = true }
tl = { version = "0.7.7", optional = true }
rust_decimal = { version = "1.26.1", optional = true }
pest = { version = "2.4.1", optional = true }
glob = { version = "0.3.0", optional = true }
globset = { version = "0.4.9", optional = true }
#lsp-types = { version = "0.93.2", optional = true }
chrono = { version = "0.4.22", optional = true }
parcel_css = { version = "1.0.0-alpha.32", optional = true }
css-color = { version = "0.2.4", optional = true }
peginator = { version = "0.3.0", optional = true }
diagnostic= "0.3.7"
#git = "https://github.com/oovm/diagnostic-rs"
#rev = "b2bc260a"

[dev-dependencies]

[features]
default = []
#lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
