[package]
name = "macrowind"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind translater at compile time"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/macrowind"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
tailwind-css = "0.11.9"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
