[package]
name = "macrowind"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind translater at compile time"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/macrowind"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }

[dependencies.tailwind-css]
version = "0.12.*"
path = "../tailwind-to-css"

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
