[package]
name = "macrowind"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind translater at compile time"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/macrowind"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
tailwind-css = "0.13.0"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
