[package]
name = "tailwind-rs"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind translater for html and more"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-css"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
tl = { version = "0.7.7", optional = true }
parcel_css = "1.0.0-alpha.32"
tailwind-css = { version = "0.12.4", features = ["compile_time"] }
itertools = "0.10.5"
log = "0.4.17"
xxhash-rust = "0.8.6"

[dependencies.tailwind-error]
version = "1.3.0"
features = ["parcel_css", "nom", "css-color"]

[dev-dependencies]

[features]
default = ["html"]
html = ["tl", "tailwind-error/tl"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
