[package]
name = "tailwind-rs"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind translater for html and more"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
tl = { version = "0.7.7", optional = true }
lightningcss = "1.0.0-alpha.49"
itertools = "0.11.0"
log = "0.4.20"
xxhash-rust = "0.8.7"

[dependencies.tailwind-css]
version = "0.12.*"
path = "../tailwind-to-css"
features = ["compile_time"]

[dependencies.tailwind-error]
version = "1.3.*"
path = "../tailwind-error"
features = ["lightningcss", "nom", "css-color"]

[dev-dependencies]

[features]
default = ["html"]
html = ["tl", "tailwind-error/tl"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
