[package]
name = "tailwind-show-case"
publish = false
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
tailwind-rs = { version = "0.1", path = "../tailwind-rs" }
dioxus = "0.1.8"

[dependencies.tailwind-error]
version = "1.1.2"
features = []

[dev-dependencies]

[features]
default = []
