[package]
name = "tailwind-show-case"
publish = false
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
tailwind-rs = { version = "0.2.*", path = "../tailwind-rs" }
dioxus = { version = "0.2.3", features = ["web"] }
wasm-logger = "0.2.0"
log = "0.4.14"
wasm-bindgen = "0.2.79"

[dependencies.tailwind-error]
version = "1.3.0"
features = []

[dev-dependencies]


[features]
default = []
