[package]
name = "tailwind-show-case"
publish = false
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
tailwind-rs = { version = "0.2.*", path = "../tailwind-rs" }
dioxus = { version = "0.4.0", features = [] }
wasm-logger = "0.2.0"
log = "0.4.20"
wasm-bindgen = "0.2.87"

[dependencies.tailwind-error]
version = "1.3.*"
path = "../tailwind-error"
features = []

[dev-dependencies]


[features]
default = []
