[package]
name = "tailwind-css"
version = "0.12.3"
authors = ["Aster <192607617@qq.com>"]
description = "Compile tailwind short instructions to css"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-css"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
css-color = "0.2.4"
log = "0.4.17"
tailwind-ast = { version = "0.4.0", path = "../tailwind-ast" }
nom = "7.1.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
itertools = "0.10.5"

[dependencies.tailwind-error]
version = "1.3.0"
features = ["nom", "css-color"]

[dev-dependencies]

[features]
default = []
# More compile-time checks, hardcoding adds some bulk and slows things down a bit
# You can remove these checks as a runtime framework
compile_time = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
