[package]
name = "tailwind-css"
version = "0.12.6"
authors = ["Aster <192607617@qq.com>"]
description = "Compile tailwind short instructions to css"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-css"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
css-color = "0.2.5"
log = "0.4.20"
nom = "7.1.3"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
itertools = "0.11.0"

[dependencies.tailwind-ast]
version = "0.4.*"
path = "../tailwind-ast"

[dependencies.tailwind-error]
version = "1.3.*"
path = "../tailwind-error"
features = ["nom", "css-color"]

[dev-dependencies]

[features]
default = []
# More compile-time checks, hardcoding adds some bulk and slows things down a bit
# You can remove these checks as a runtime framework
compile_time = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
